# TinyGameServer

TinyGameServer/: CMakeLists.txt  db.sql  main.cpp
TinyGameServer/HandleMessages/: Client.h  DB.cpp  Singleton.h  handler.cpp
TinyGameServer/NetConnect/: connect.cpp
TinyGameServer/Protobuf/: messages.pb.cc  messages.pb.h  messages.proto
